Fixed the alignment of elements

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: Helvetica;
+  text-decoration: none;
 }
 
 /* Navbar styles */
@@ -108,7 +109,7 @@ body {
   width: 95%;
   position: relative;
   top: -10px;
-  margin-left: 40px;
+  margin-left: 50px;
 }
 
 .category-grid {
@@ -131,13 +132,12 @@ body {
   background-color: #555;
 }
 
-/* Video grid styling */
 .video-grid {
   display: grid;
   place-items: center;
   margin: 20px auto;
   width: 95%;
-  margin-bottom: 40px; /* Add space below the video */
+  margin-bottom: 40px;
 }
 
 .video-wrapper {
@@ -148,20 +148,19 @@ body {
 
 .slideshow {
   width: 100%;
-  max-width: 1788px;
+  max-width: 1818px;
   height: 451px;
   object-fit: cover;
   border-top: 1px solid transparent;
 }
 
 .grid-container {
-  display: grid
-;
+  display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   padding: 20px;
   margin-top: 40px;
-  width: 98%;
+  width: 97%;
   margin-left: auto;
   margin-right: auto;
 }
@@ -169,7 +168,6 @@ body {
 .grid-item {
   position: relative;
   background-color: transparent;
-  border-radius: 8px;
   overflow: hidden;
 }
 
@@ -240,18 +238,25 @@ body {
   background-color: #555;
 }
 
+.Featured-title {
+  background-image: linear-gradient(360deg, black, #494848);
+  margin: 40px auto 0;
+  text-align: center;
+  color: #fff;
+  width: 95%;
+  font-size: 30px;
+}
 .featured-products {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
-  padding: 34px;
-  margin-top: 40px;
+  padding: 49px;
+  margin-top: -30px;
 }
 
 .product-item {
   background-color: #fff;
   border: 1px solid #ddd;
-  border-radius: 8px;
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
